# adaptive_audio_filter_emulator

./: CMakeLists.txt  README.md  audio_file.txt  run_build.sh
include/: audio_processing.hpp  coeffs_hex.mem  fileio.hpp  frame.hpp
python/: emulator_GUI.py  load_file.py  quant_tool.py  samples.py
src/: audio_processing.cpp  fileio.cpp  frame.cpp  main.cpp
